--- a/public/css/giohang.css
+++ b/public/css/giohang.css
@@ -54,7 +54,7 @@ body__dssanpham {
     z-index: 10;
     -webkit-box-align: center;
     align-items: center;
-    border-bottom: 1px solid #e0e0e0;
+    border: 1px solid #e0e0e0;
     padding-bottom: 10px;
 }
 
