--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1272,3 +1272,50 @@ body {
     background-color: #0056b3;
 }
 
+.search-results {
+    position: absolute;
+    top: 50px;
+    left: 0;
+    width: 55%;
+    background: #fff;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    max-height: 300px;
+    overflow-y: auto;
+    display: none;/* Ẩn mặc định */
+    margin-top: 52px;
+    margin-left: 260px;
+}
+
+.search-results .product-item {
+    display: flex;
+    padding: 10px;
+    align-items: center;
+    border-bottom: 1px solid #ddd;
+}
+
+.search-results .product-item:last-child {
+    border-bottom: none;
+}
+
+.search-results .product-item img {
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+    border-radius: 5px;
+}
+
+.search-results .product-item h2 {
+    font-size: 14px;
+    margin: 0;
+    color: #333;
+    flex: 1;
+}
+
+.search-results .product-item .price {
+    color: #e74c3c;
+    font-weight: bold;
+    margin-left: 10px;
+}
