--- a/public/css/thanhtoan.css
+++ b/public/css/thanhtoan.css
@@ -92,3 +92,21 @@ button:hover {
 .voucher select {
     color: #333;
 }
+.note {
+    margin-top: 20px;
+}
+
+.note h3 {
+    margin-bottom: 10px;
+    font-size: 1.2em;
+}
+
+.note textarea {
+    width: 100%;
+    padding: 10px;
+    resize: vertical;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 1em;
+}
+
