--- a/public/css/dp.css
+++ b/public/css/dp.css
@@ -916,3 +916,29 @@ body {
     justify-content: center;
     cursor: pointer;
 }
+
+.popup-comfirm {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+    justify-content: center;
+    align-items: center;
+}
+
+.popup-contentcomfirm {
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    width: 300px;
+    text-align: center;
+}
+
+.popup-contentcomfirm button {
+    cursor: pointer;
+    margin-top: 10px;
+}
