--- a/public/css/category.css
+++ b/public/css/category.css
@@ -222,7 +222,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    gap: 70px;
+    gap: 39px;
     margin-top: 20px;
     height: 200px;
 }
@@ -235,7 +235,7 @@ body {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease-in-out;
     border-radius: 7px;
-    max-height: 290px;
+    height: 170px;
 }
 
 .product-item:hover {
